Using AlgART 1.5.1